--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="p0"><p id="p1"> chicken
+    <div class="p0"><p class="p1"> chicken
       <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!</p>
     </p></div>
   </div>
   <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="p0"><p id="p1"> Fish
+    <div class="p0"><p class="p1"> Fish
       <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!</p>
     </p></div>
   </div>
   <div class="col-lg-4 col-md-12 col-sm-12">
-    <div class="p0"><p id="p1">Sushi
+    <div class="p0"><p class="p1">Sushi
       <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!</p>
     </p></div>
   </div>
